--- a/api/package.json
+++ b/api/package.json
@@ -15,7 +15,9 @@
     "express": "^4.18.3",
     "express-async-errors": "^3.1.1",
     "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "bcryptjs": "^2.4.3",
+    "knex": "^3.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
