--- a/api/package.json
+++ b/api/package.json
@@ -13,14 +13,16 @@
   "author": "David Ferreira Lima",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.3",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.2",
+    "knex": "^3.1.0",
     "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7",
-    "bcryptjs": "^2.4.3",
-    "knex": "^3.1.0"
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "dotenv": "^16.4.5"
   }
 }
