fix: fix the dependency of dotenv

--- a/api/package.json
+++ b/api/package.json
@@ -19,10 +19,10 @@
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0",
-    "dotenv": "^16.4.5"
+    "nodemon": "^3.1.0"
   }
 }
