--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "description": "API desenvolvida no curso explorer da Rocketseat",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --watch",
     "start": "pm2-runtime start ecosystem.config.js --env production",
     "dev": "nodemon ./src/server.js",
     "migrate": "knex migrate:latest"
